deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoheaders
  namespace: default
  labels:
    app: echoheaders
    neo-app: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoheaders
      neo-app: "true"
  template:
    metadata:
      labels:
        app: echoheaders
        neo-app: "true"
    spec:
      containers:
        - name: echoheaders
          image: vikipranata/echoheaders:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
             capabilities:
               drop:
               - ALL
               add:
               - NET_RAW
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
