deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders
  namespace: default
  labels:
    app: echoheaders
spec:
  type: ClusterIP
  selector:
    app: echoheaders
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
